# aura_everything

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  srs.md
AURA-Bio-Corpus/05_Metadata/: corpus.sqlite3  sources_snapshot.json
AURA-Bio-Corpus/05_Metadata/manifests/: files.jsonl
AURA-Bio-Corpus/05_Metadata/runs/: curation_smoke.jsonl
aura_corpus/: __init__.py  books.py  catalogs.py  cli.py  curation.py  discovery.py  download.py  env.py  extract.py  models.py  net.py  pubmed_filter.py  registry.py  store.py  validation.py
config/: sources.toml
corpus_pipeline/: README.md  VERIFICATION.md  pyproject.toml
corpus_pipeline/config/: pipeline.toml
corpus_pipeline/kaggle/: README.md  aura_kaggle_embeddings.py
corpus_pipeline/src/aura_bio_pipeline/: __init__.py  chunking.py  cleaning.py  cli.py  config.py  dedup.py  embedding.py  jsonl.py  models.py  parsers.py  pipeline.py  provenance.py
corpus_pipeline/src/aura_bio_processing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
corpus_pipeline/tests/: test_cleaning_chunking.py  test_kaggle_embeddings.py  test_parsers.py  test_provenance.py  test_state.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/openapi/: aura-bio.openapi.json
frontend/src/: app.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: activity-center.tsx  layout.tsx  (+2 more)
scripts/: run_pipeline.ps1
tests/: test_pipeline.py
tests/fixtures/: curation_input.jsonl
(+15 files in other folders)
